Introduced New Test for the framework and added
Added:
InvalidTest
SearchProductTest
AddMyFirstAddressTest
ProductCheckoutTest

--- a/pom.xml
+++ b/pom.xml
@@ -87,5 +87,10 @@
 			<artifactId>java-selenium-sample</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>1.0.2</version>
+		</dependency>
 	</dependencies>
 </project>
